monticore-grammar/src/test/resources/de/monticore/grammar/cocos/valid/ScopeRule.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.valid;

grammar ScopeRule {

 symbol A = Name;

 scoperule =
    name:String*
    foo:int
    gen:List<String>
    opt:String?;

}
