monticore-grammar/src/test/resources/de/monticore/grammar/cocos/invalid/A4068/A4068.mc4
/* (c) https://github.com/MontiCore/monticore */

package  de.monticore.grammar.cocos.invalid.A4068;

component grammar A4068 {
    symbol scope Automaton = "automaton" Name "{" (State | Transition | Tag)* "}" ;
    State = "Foo";
    Transition = "Baa";
    Tag = StartTag EndTag;
    token StartTag = "<": -> pushMode(text);
    token EndTag (text) = ">" : -> popMode;
}